2002-01-11  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02817]
	* menu.c (menuBackwardSearch): new regexMatch()

2002-01-11  aito@fw.ipsj.or.jp

	* [w3m-dev 02815]
	* cookie.c (domain_match): use new regex
	* main.c (chkURLBuffer): use new regex
	* main.c (chkNMIDBuffer): use new regex
	* menu.c (menuForwardSearch): new regexMatch()
	* regex.c (RegexMatch): negative length means whole string
	* regex.c (RegexMatch): new regmatch()
	* regex.c (regmatch_sub_anytime): add 5th arg `char *'
	* regex.c (regmatch_iter): add 4th arg `char *'
	* regex.c (regmatch): add 3rd arg `char *'
	* url.c (openSocket): use new regex

2002-01-10  aito@fw.ipsj.or.jp

	* [w3m-dev 02811] new regexp implementation
	* regex.h: remove defines
	* regex.h: struct regexchar, struct regex
	* regex.c: include stdio.h, stdlib.h, string.h, config.h
	* regex.c: remove include fm.h
	* regex.c (NULL JP_CHARSET IS_ALPHA IS_KANJI1): define unless defined
	* regex.c (RE_*) define
	* regex.c (st_ptr): deleted
	* regex.c (regmatch): remove 4th arg `int'
	* regex.c (newRegex0): rewrite, based on old newRegex
	* regex.c (newRegex): use newRegex0()
	* regex.c (RegexMatch): rewrite
	* regex.c (struct MatchingContext1): added
	* regex.c (struct MatchingContext2): added
	* regex.c (YIELD): added
	* regex.c (regmatch_sub_anytime): added
	* regex.c (regmatch_iter): added
	* regex.c (regmatch): use regmatch_iter()
	* regex.c (regmatch1): rewrite
	* regex.c (lc2c): add 2nd arg `len', rewrite

2002-01-10  Yoshinobu Sakane <sakane@d4.bsd.nes.nec.co.jp>

	* [w3m-dev 02810]
	* scripts/Makefile: read -r
	* scripts/w3mhelp.cgi.in: fix bugs displaying "C-" only in some case

2002-01-08  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02794]
	* url.c (parseURL): cleanup
	* url.c (parseURL2): file_unquote(pu->file)

2002-01-07  Fumitoshi UKAI  <ukai@debian.or.jp>

	* version.c.in: 0.2.4+cvs

2002-01-07  Fumitoshi UKAI  <ukai@debian.or.jp>

	* w3m 0.2.4
	* version.c.in: update