@@ -1,3 +1,8 @@
+2002-01-11  Fumitoshi UKAI  <ukai@debian.or.jp>
+
+	* [w3m-dev 02818]
+	* regex.c (regmatch_iter): return 0 if out of range
+
 2002-01-11  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
 
 	* [w3m-dev 02817]
@@ -1837,4 +1842,4 @@
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.205 2002/01/10 15:43:11 ukai Exp $
+$Id: ChangeLog,v 1.206 2002/01/10 16:11:32 ukai Exp $
